--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -102,7 +102,7 @@
                     <form method="post" role="form" th:action="@{/login}" class="form-horizontal">
                         <div class="input-group mb-3">
                             <span class="input-group-text">
-                                <i class="bi bi-person-fill"></i>
+                                <i class="bi bi-envelope-fill"></i>
                             </span>
                             <input type="text" id="username" name="username" class="form-control"
                                    placeholder="Email" required/>
