--- a/src/main/resources/templates/adresar/favorite.html
+++ b/src/main/resources/templates/adresar/favorite.html
@@ -80,6 +80,7 @@
         .table-container {
             margin-top: 20px;
             position: relative;
+            height: 500px;
         }
 
         .table-container::before {
@@ -175,6 +176,11 @@
 
         select:invalid { color: gray; }
 
+        .number {
+            margin: 30px 0 0 150px;
+            text-align: center;
+            font-size: small;
+        }
 
     </style>
 </head>
@@ -194,13 +200,16 @@
             </div>
             <div class="table-container">
                 <div class="row">
-                    <div class="col-9">
+                    <div class="col-7">
                         <div class="search-container">
-                            <input id="search" oninput="searchContacts()" placeholder="Search for contacts..."
+                            <input id="search" oninput="searchContacts()" placeholder="Search contacts..."
                                    type="text">
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col number">
+                        <p id="total-contacts"></p>
+                    </div>
+                    <div class="col-1">
                         <div class="pagination justify-content-end">
                             <a id="prevPage" aria-disabled="true" class="page-link" tabindex="-1">
                                 <i class="bi bi-chevron-left"></i>
@@ -211,10 +220,8 @@
                         </div>
                     </div>
                 </div>
-                </div>
-            <div class="table-container">
-                <table class="table">
-                    <thead>
+                <table id="contact-table" class="table">
+                <thead>
                     <tr>
                         <th>Name</th>
                         <th>Last Name</th>
@@ -246,7 +253,7 @@
     </div>
 </div>
 <script>
-    const contactsPerPage = 7;
+    const contactsPerPage = 8;
     let currentPage = 1;
     const contacts = document.querySelectorAll("#contact-table tbody tr");
     const pageCount = Math.ceil(contacts.length / contactsPerPage);
@@ -268,6 +275,9 @@
 
         prevPage.classList.toggle("disabled", currentPage === 1);
         nextPage.classList.toggle("disabled", currentPage === pageCount);
+
+        const totalContactsElement = document.getElementById("total-contacts");
+        totalContactsElement.textContent = `Total Contacts: ${contacts.length}`;
     }
 
     function goToPreviousPage() {
