--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -119,7 +119,7 @@
                         </div>
 
                         <p class="info-message">Don't have an account? </p>
-                        <p class="info-message"><a href="/register">Register here</a>.</p>
+                        <p class="info-message"><a href="/register">Register here</a></p>
                     </form>
                 </div>
             </div>
