--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -129,7 +129,7 @@
                         </div>
 
                         <p class="info-message">Already have an account?</p>
-                        <p class="info-message"><a href="/login">Login here</a>.</p>
+                        <p class="info-message"><a href="/login">Login here</a></p>
                     </form>
                 </div>
             </div>
